@@ -1,3 +1,9 @@
+2008-08-26  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* Binding.cs: Actually implement data binding support for 
+	classes implementing IBindableComponent.
+	* ControlBindingsCollection.cs: Likewise.
+
 2008-02-26  Andreia Gaita  <avidigal@novell.com>
 
 	* PropertyGridView.cs: Use a message filter to check when to 
